<resources>
    <string name="app_name">Lojinha PagSeguro</string>

    <string name="billet_title">Boleto</string>
    <string name="msg_billet_error">Ocorreu um erro ao gerar o boleto.</string>
    <string name="msg_billet_generate">Gerando boleto...</string>
    <string name="msg_billet_success">Pague o seu boleto para que o pagamento seja confirmado</string>
    <string name="msg_billet_number">O número do boleto é: </string>
    <string name="msg_billet_link">Para baixar o boleto click no link abaixo</string>
    <string name="resume_title">Resumo do Pedido</string>
    <string name="payment_title">Pagamento</string>

    <string name="address_title">Endereço</string>
    <string name="label_delivery_address">Endereço</string>
    <string name="hint_zipcode_address">CEP</string>
    <string name="hint_complement_address">Complemento</string>
    <string name="hint_number_address">Número</string>
    <string name="msg_address_error">Ocorreu um erro ao consultar o endereço.</string>
    <string name="msg_address_search">Consultando endereço...</string>

    <string name="personal_info_title">Dados pessoais</string>
    <string name="hint_personal_document">CPF</string>
    <string name="hint_personal_full_name">Nome completo</string>
    <string name="hint_personal_email">Email</string>
    <string name="hint_personal_phone_number">Telefone</string>
    <string name="hint_personal_birth_date">Data de nascimento</string>

    <string name="payment_value_hint">informar valor</string>
    <string name="hint_value">Valor</string>
    <string name="products">Produtos</string>
    <string name="cart">Carrinho</string>
    <string name="product_name">Café Nespresso</string>
    <string name="product_description">Dentro de cada cápsula Nespresso encontram-se os melhores cafés do mundo, talentosamente misturados, torrados e moídos.
        \n\nCompre online e desfrute seu Nespresso no PagCafé, localizado no hall de entrada do 2º andar do PagSeguro.
        \n\nNo PagCafé você irá encontrar cápsulas Nespresso de diversos sabores.
    </string>
    <string name="message_access">Estou ciente que devo retirar a(s) cápsula(s) no PagCafé</string>

    <string name="about">Sobre</string>
    <string name="about_msg_link">O app da Lojinha está utilizando a lib do Checkout in App\n\n<a href='https://dev.pagseguro.uol.com.br/documentacao/aplicativo-pagseguro/checkout-in-app'>Acesse o link</a></string>
    <string name="about_msg_team"> Aplicativo desenvolvido pelo time Monte Verde</string>
    <string name="url_dev">https://dev.pagseguro.uol.com.br/documentacao/aplicativo-pagseguro/checkout-in-app</string>

    <string name="payment_method">Forma de Pagamento</string>
    <string name="installments">Parcelamento</string>
    <string name="installments_failed">Não foi possível realizar o parcelamento.</string>
    <string name="btn_buy">Comprar</string>
    <string name="btn_payment_method">Escolher forma de pagamento</string>

    <string name="txt_wait">Aguarde</string>
    <string name="txt_error">Erro</string>
    <string name="txt_ok">OK!</string>
    <string name="txt_payment_approved">Pagamento Aprovado!</string>
    <string name="txt_payment_billet">Boleto bancário</string>
    <string name="txt_payment_credit_card">Cartão de crédito</string>
    <string name="txt_performing_payment">Realizando pagamento...</string>
    <string name="txt_copy">Copiado</string>
    <string name="txt_download_billet">Download do Boleto PagSeguro</string>
    <string name="txt_get_product_error">Falha ao buscar produto</string>
    <string name="txt_payment_form_wallet">Cartão de crédito pelo app</string>

</resources>
