<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mask="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/edt_document"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="18dp"
            android:fontFamily="sans-serif-medium"
            android:background="@android:drawable/editbox_background"
            android:paddingLeft="10dp"
            android:maxLength="14"
            android:hint="@string/hint_personal_document"
            app:mask="###.###.###-##"
            android:inputType="number"
            android:digits="0,1,2,3,4,5,6,7,8,9,.,-"
            />

        <EditText
            android:id="@+id/edt_full_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="18dp"
            android:fontFamily="sans-serif-medium"
            android:background="@android:drawable/editbox_background"
            android:paddingLeft="10dp"
            android:hint="@string/hint_personal_full_name"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="18dp"
            android:fontFamily="sans-serif-medium"
            android:background="@android:drawable/editbox_background"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:hint="@string/hint_personal_email"/>

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:fontFamily="sans-serif-medium"
            android:background="@android:drawable/editbox_background"
            android:paddingLeft="10dp"
            android:inputType="phone"
            android:maxLength="16"
            android:hint="@string/hint_personal_phone_number"
            app:mask="(##) #####-####"
            />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/edt_birth_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:fontFamily="sans-serif-medium"
            android:background="@android:drawable/editbox_background"
            android:paddingLeft="10dp"
            android:inputType="date"
            android:maxLength="16"
            android:visibility="gone"
            android:hint="@string/hint_personal_birth_date"
            app:mask="##/##/####"
            />

    </LinearLayout>

    <Button
        android:id="@+id/bt_next_personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:enabled="false"
        android:clickable="false"
        android:text="Continuar"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_selector"/>
</RelativeLayout>