<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_postal_code"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:textSize="18dp"
                android:background="@android:drawable/editbox_background"
                android:paddingLeft="10dp"
                android:maxLength="8"
                android:inputType="number"
                android:hint="@string/hint_zipcode_address"/>

            <ImageButton
                android:id="@+id/bt_search_address"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_search"
                android:scaleType="centerCrop"
                android:enabled="false"
                android:background="@drawable/button_selector"
                android:clickable="false"/>
        </LinearLayout>

        <EditText
            android:id="@+id/tv_street"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:fontFamily="sans-serif-medium"
            android:background="@android:drawable/editbox_background"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:text="Endereço"/>

        <EditText
            android:id="@+id/tv_district"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:fontFamily="sans-serif-medium"
            android:background="@android:drawable/editbox_background"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:text="Bairro"/>

        <EditText
            android:id="@+id/tv_city_state"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:fontFamily="sans-serif-medium"
            android:background="@android:drawable/editbox_background"
            android:enabled="false"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:text="Cidade"/>

        <LinearLayout
            android:id="@+id/layout_complement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_address_number"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:textSize="18dp"
                android:fontFamily="sans-serif-medium"
                android:background="@android:drawable/editbox_background"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:hint="@string/hint_number_address"/>

            <EditText
                android:id="@+id/edt_address_complement"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:fontFamily="sans-serif-medium"
                android:background="@android:drawable/editbox_background"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:hint="@string/hint_complement_address"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:enabled="false"
        android:clickable="false"
        android:text="Continuar"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_selector"/>

</RelativeLayout>